--- a/src/main/webapp/views/teacher.html
+++ b/src/main/webapp/views/teacher.html
@@ -4,146 +4,152 @@
 <meta charset="UTF-8">
 <link rel="shortcut icon" href="/SSMall/images/head.jpeg" type="image/x-icon">
 <link href="/SSMall/styles/bootstrap/bootstrap.min.css" rel="stylesheet">
+<link href="/SSMall/styles/bootstrap-table/bootstrap-table.min.css" rel="stylesheet">
+<link href="/SSMall/styles/bootstrap-select/bootstrap-select.min.css" rel="stylesheet">
 <link href="/SSMall/js/layer/skin/default/layer.css" rel="stylesheet" id="layuicss-skinlayercss"></head>
 <script type="text/javascript" src="/SSMall/js/jquery.min.js"></script>
-<script type="text/javascript" src="/SSMall/js/vue.js"></script>
 <script type="text/javascript" src="/SSMall/js/bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript" src="/SSMall/js/bootstrap-table/bootstrap-table.js"></script>
+<script type="text/javascript" src="/SSMall/js/bootstrap-select/bootstrap-select.min.js"></script>
 <script type="text/javascript" src="/SSMall/js/layer/layer.js"></script>
 <script type="text/javascript" src="/SSMall/js/validate/jquery.validate.min.js"></script>
-<title>注册</title>
+<script type="text/javascript" src="/SSMall/js/vue.js"></script>
+<script type="text/javascript" src="/SSMall/js/common.js"></script>
+<title>教师</title>
 </head>
 <body>
-	<div class="panel-body" id="register">
+	<div class="panel-body" id="teacherVue">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-	        	<h3 class="panel-title">用户注册</h3>
-	    	</div>
-	    	<div id="" style="padding: 10px 10px 0px 10px;">
-				<form class="form-horizontal" id="orderForm" method="post">
-								<div class="form-group">
-							 		<div class="col-md-4 control-label">注册用户：</div>
-								 	<div class="col-md-5">
-								  		<select class="form-control" name="user" id="user" @change="userExchage" >
-											<option value = "1">学生</option>
-											<option value = "2">教师</option>
-										</select>
-								 	</div>
-							 	</div>
-							 	<div class="form-group">
-										<div class="col-sm-4 control-label">学号/工号：</div>
-									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.num" placeholder="请输入学号/工号"/>
-									</div>
-								</div>
-								<div class="form-group">
-									<div class="col-sm-4 control-label">密码：</div>
-									<div class="col-sm-5">
-										<input type="password" class="form-control" v-model ="user.password" placeholder="请输入密码"/>
-									</div>
-								</div>
-								<div class="form-group">
-									<div class="col-sm-4 control-label">确认密码：</div>
-									<div class="col-sm-5">
-										<input type="password" class="form-control" placeholder="请再输入一遍密码"/>
-									</div>
-								</div>
-								<div class="form-group" id="student">
-									<div class="col-md-4 control-label">班级：</div>
-								 	<div class="col-md-5">
-								 		<select class="form-control" v-model="user.grade">  
-										  <option v-for="option in options" v-bind:value="option.value">  
-										    {{ option.text }}  
-										  </option>  
-										</select> 
-								  		<!-- <select class="form-control"  v-model="user.stuClass">
-											<option value = "1">软件工程1401</option>
-											<option value = "2">软件工程1402</option>
-											<option value = "3">软件工程1403</option>
-											<option value = "4">软件工程1404</option>
-										</select> -->
-								 	</div>
-								 </div>
-								
-								<div class="form-group">
-									<div class="col-sm-4 control-label">姓名：</div>
-									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.name" placeholder="请输入用户姓名"/>
-									</div>
-								</div>	
-								<div class="form-group">
-									<div class="col-sm-4 control-label">性别：</div>
-									<div class="col-sm-5">
-										男<input type="radio" name="m" value="m" v-model = "user.sex"/>  
-										女<input type="radio" name="f" value="f" v-model = "user.sex"/>  
-										<!-- <input type="text" class="form-control" v-model ="user.sex" placeholder="请输入用户ID"/> -->
-									</div>
-								</div>
-								<div class="form-group">
-									<div class="col-sm-4 control-label">电话：</div>
-									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.phone" placeholder="请输入电话"/>
-									</div>
-								</div>
-								<div class="form-group">
-									<div class="col-sm-4 control-label">邮箱：</div>
-									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.mail" placeholder="请输入邮箱"/>
-									</div>
-								</div>
-									
-								<div style="text-align: center;">
-			                          <button type="button" class="btn btn-primary" @click="submit" >  
-			                              	确认
-			                          </button>
-			                          <a href="/SSMall/views/login.html" class="btn btn-default" style="margin-left:30px">取消</a>
-								</div>
-					</form>
+				<h3 class="panel-title">教师</h3>
 			</div>
-		</div>		
+			<div id="toolbar">
+				<form id="searchForm" style="margin-left: 10px;">
+					<div class="form-inline">
+						<label class="control-label">批改状态：</label>
+						<div class="form-group">
+							<select class="form-control selectpicker" v-model="job.state" data-live-search="false"
+								data-size="10">
+								<option data-tokens="全部" value="9999" selected>全部</option>
+								<option data-tokens="未批改" value="1">未批改</option>
+								<option data-tokens="已批改" value="2">已批改</option>
+							</select>
+						</div>
+						<label class="control-label">班级：</label>
+						<div class="form-group">
+							<select class="form-control" v-model="job.grade">  
+								  <option v-for="grade in grades" v-bind:value="grade.value">  
+								    {{ grade.text }}  
+								  </option>  
+								</select> 
+						 </div>
+						 <label class="control-label">科目：</label>
+						<div class="form-group">
+							<select class="form-control" v-model="job.subject">  
+								  <option v-for="subject in subjects" v-bind:value="subject.value">  
+								    {{ subject.text }}  
+								  </option>  
+								</select> 
+						 </div>
+						 <button type="button" class="btn btn-primary" @click="search" >搜索 </button>
+						
+					</div>
+				</form>
+			</div>
+			<table id="table" data-classes="table table-hover" 
+				data-pagination="true" data-toggle="table"
+				data-query-params="queryParams"
+				data-url="localhost:8080/SSMall/working/queryWorkList"
+				data-id-field="id">
+				<thead>
+					<tr>
+						<th data-formatter="rowNoFormatter">序号</th>
+						<th data-field="title">作业题目</th>
+						<th data-field="teacherName">提交人</th>
+						<th data-field="publishUrl">作业URL</th>
+						<th data-field="state" data-formatter="stateFormatter">作业状态</th>
+						<th data-field="className" data-formatter="classNameFormatter">班级 </th>
+						<th data-field="subName" data-formatter="deliveryTypeFormatter">科目</th>
+						<th data-field="stuName">学生姓名</th>
+						<th data-field="submitUrl">提交作业</th>
+						<th data-field="updateTime">修改时间</th>
+						
+					</tr>
+				</thead>
+			</table>
+		</div>
 	</div>
 </body>
 <script type="text/javascript">
+	//按状态查询
+	/* $("#accountStatus").change(function() {
+		$("#table").bootstrapTable('refresh');
+	})
+		
+	// 搜索
+	$("#search").click(function(){
+		$("#table").bootstrapTable('refresh');
+	}); */
+
+	/* $(window).resize(function() {
+		$('[data-toggle="table"]').bootstrapTable('resetView');
+	}); */
 
 var baseUrl = "http://localhost:8080/SSMall";
 var vm = new Vue({
-    el:'#register',
+    el:'#teacherVue',
     data:{
-        user:{},
-        options:[]
+    	job:{},
+    	grades:[],
+    	subjects:[]
     },
     methods: {
-    	
-    	userExchage :function(){
-    		userInfo();
+    	//序号
+    	rowNoFormatter :function(value, row, index){
+    		var options = $("#table").bootstrapTable('getOptions');  
+    	    return options.pageSize * (options.pageNumber - 1) + index + 1;
     	},
-    	submit :function(){
-    		 var user = $("#user").val();
-    		 var url;
-    		 if(user=="1"){//为学生
-    			url = baseUrl+"/user/stuRegister";
-    		 }else{//为教师
-    			url = baseUrl+"/user/teaRegister";
-    		 }
-	   		 $.ajax({
-	   	        type: "POST",
-	   	        url: url,
-	   	        data : vm.user,
-	   	        dataType:"json",
-	   	        success: function(resultData){
-	   				if(resultData.state==0){//保存成功
-	   					window.location.href = baseUrl + "/views/login.html";
-	   				 }else{
-	   					layer.alert('注册失败，请重新提交', {
-	   						  icon: 0,
-	   						  skin: 'layer-ext-moon'
-	   						});
-	   				 }           	 
-	   	        }
-	   	    });
+    	//柔和灰（text-muted）、主要蓝（text-primary）、成功绿（text-success）、信息蓝（text-info）、警告黄（text-warning）、危险红（text-danger）
+    	//作业状态
+    	stateFormatter :function(value, row, index) {
+    		if (value == "1") {
+    			return "<span class='text-primary'>未批改</span>";
+    		} else{
+    			return "<span class='text-success'>已批改</span>";
+    		}
+    	},
+    	//班级信息
+    	classNameFormatter :function(value, row, index) {
+    		if (value == "1") {
+    			return "<span class='text-info'>快递</span>";
+    		} else if (value == "2") {
+    			return "<span class='text-info'>EMS</span>";
+    		} else if (value == "3") {
+    			return "<span class='text-info'>平邮</span>";
+    		} else {
+    			return "<span class='text-info'>商户自有物流</span>";
+    		}
+    	},
+    	//科目信息
+    	deliveryTypeFormatter :function(value, row, index) {
+    		if (value == "1") {
+    			return "<span class='text-info'>快递</span>";
+    		} else if (value == "2") {
+    			return "<span class='text-info'>EMS</span>";
+    		} else if (value == "3") {
+    			return "<span class='text-info'>平邮</span>";
+    		} else {
+    			return "<span class='text-info'>商户自有物流</span>";
+    		}
+    	},
+    	search :function(){
+    		$("#table").bootstrapTable('refresh');
     	}
     },
     mounted: function () {
-    	userInfo();
+    	$(window).resize(function() {
+    		$('[data-toggle="table"]').bootstrapTable('resetView');
+    	});
     	//初始化班级信息
     	initStuClass();
       }
@@ -156,7 +162,6 @@ function initStuClass(){
         url: url,
         dataType:"json",
         success: function(resultData){
-        	
 			if(resultData.state==0){//查询成功
 				var options = [];
 			 	var data = resultData.data;
@@ -164,10 +169,9 @@ function initStuClass(){
 					var option = {}
 					option.text = data[i].className;
 					option.value = data[i].classNum;
-					vm.user.stuClass = data[i].classNum;
 					options.push(option);
 				}
-				vm.options = options;
+				vm.grades = options;
 			 }else{
 				 //查询失败
 				 alert(resultData.message);
