--- a/src/main/webapp/views/student.html
+++ b/src/main/webapp/views/student.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="/SSMall/js/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="/SSMall/js/layer/layer.js"></script>
 <script type="text/javascript" src="/SSMall/js/validate/jquery.validate.min.js"></script>
+<script type="text/javascript" src="/SSMall/js/common.js"></script>
 <title>学生页</title>
 </head>
 <body>
@@ -134,9 +135,8 @@ var vm = new Vue({
 	   				if(resultData.state==0){//保存成功
 	   					window.location.href = baseUrl + "/views/login.html";
 	   				 }else{
-	   					layer.alert('注册失败，请重新提交', {
-	   						  icon: 0,
-	   						  skin: 'layer-ext-moon'
+	   					layer.msg('注册失败，请重新提交', {
+	   						  icon: 0
 	   						});
 	   				 }           	 
 	   	        }
