--- a/src/main/webapp/views/register.html
+++ b/src/main/webapp/views/register.html
@@ -4,12 +4,15 @@
 <meta charset="UTF-8">
 <link rel="shortcut icon" href="/SSMall/images/head.jpeg" type="image/x-icon">
 <link href="/SSMall/styles/bootstrap/bootstrap.min.css" rel="stylesheet">
+<link href="/SSMall/styles/radio/magic-check.css" rel="stylesheet">
 <link href="/SSMall/js/layer/skin/default/layer.css" rel="stylesheet" id="layuicss-skinlayercss"></head>
 <script type="text/javascript" src="/SSMall/js/jquery.min.js"></script>
 <script type="text/javascript" src="/SSMall/js/vue.js"></script>
 <script type="text/javascript" src="/SSMall/js/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript" src="/SSMall/js/layer/layer.js"></script>
 <script type="text/javascript" src="/SSMall/js/validate/jquery.validate.min.js"></script>
+<script type="text/javascript" src="/SSMall/js/validate/bootstrapValidator.js"></script>
+<script type="text/javascript" src="/SSMall/js/validate/zh_CN.js"></script>
+<script type="text/javascript" src="/SSMall/js/layer/layer.js"></script>
 <title>注册</title>
 </head>
 <body>
@@ -32,19 +35,19 @@
 							 	<div class="form-group">
 										<div class="col-sm-4 control-label">学号/工号：</div>
 									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.num" placeholder="请输入学号/工号"/>
+										<input type="text" class="form-control" name="num" v-model ="user.num" placeholder="请输入学号/工号"/>
 									</div>
 								</div>
 								<div class="form-group">
 									<div class="col-sm-4 control-label">密码：</div>
 									<div class="col-sm-5">
-										<input type="password" class="form-control" v-model ="user.password" placeholder="请输入密码"/>
+										<input type="password" class="form-control" name="password" v-model ="user.password" placeholder="请输入密码"/>
 									</div>
 								</div>
 								<div class="form-group">
 									<div class="col-sm-4 control-label">确认密码：</div>
 									<div class="col-sm-5">
-										<input type="password" class="form-control" placeholder="请再输入一遍密码"/>
+										<input type="password" class="form-control" name="confirmPsw" placeholder="请再输入一遍密码"/>
 									</div>
 								</div>
 								<div class="form-group" id="student">
@@ -55,39 +58,38 @@
 										    {{ option.text }}  
 										  </option>  
 										</select> 
-								  		<!-- <select class="form-control"  v-model="user.stuClass">
-											<option value = "1">软件工程1401</option>
-											<option value = "2">软件工程1402</option>
-											<option value = "3">软件工程1403</option>
-											<option value = "4">软件工程1404</option>
-										</select> -->
 								 	</div>
 								 </div>
 								
 								<div class="form-group">
 									<div class="col-sm-4 control-label">姓名：</div>
 									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.name" placeholder="请输入用户姓名"/>
+										<input type="text" class="form-control" name="name" v-model ="user.name" placeholder="请输入用户姓名"/>
 									</div>
 								</div>	
 								<div class="form-group">
 									<div class="col-sm-4 control-label">性别：</div>
-									<div class="col-sm-5">
-										男<input type="radio" name="m" value="m" v-model = "user.sex"/>  
-										女<input type="radio" name="f" value="f" v-model = "user.sex"/>  
-										<!-- <input type="text" class="form-control" v-model ="user.sex" placeholder="请输入用户ID"/> -->
+									<div class="col-sm-5" style="margin-top:5px;">
+										<div class="opt" style="float: left;">
+											<input class="magic-radio" type="radio" name="radio" id="r1" value="m" checked  >
+											<label for="r1">男</label>
+										</div>
+										<div class="opt" style="float: left;margin-left:30px;">
+											<input class="magic-radio" type="radio" name="radio" id="r2" value="f" >
+											<label for="r2">女</label>
+										</div>
 									</div>
 								</div>
 								<div class="form-group">
 									<div class="col-sm-4 control-label">电话：</div>
 									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.phone" placeholder="请输入电话"/>
+										<input type="text" class="form-control" name="phone" v-model ="user.phone" placeholder="请输入电话"/>
 									</div>
 								</div>
 								<div class="form-group">
 									<div class="col-sm-4 control-label">邮箱：</div>
 									<div class="col-sm-5">
-										<input type="text" class="form-control" v-model ="user.mail" placeholder="请输入邮箱"/>
+										<input type="text" class="form-control" name="mail" v-model ="user.mail" placeholder="请输入邮箱"/>
 									</div>
 								</div>
 									
@@ -117,14 +119,19 @@ var vm = new Vue({
     		userInfo();
     	},
     	submit :function(){
-    		 var user = $("#user").val();
-    		 var url;
-    		 if(user=="1"){//为学生
+    		//表单校验
+    		if(!onsubmitFn()){
+    			return ;
+    		}
+    		vm.user.sex = $("input[name='radio']:checked").val();
+    		var user = $("#user").val();
+    		var url;
+    		if(user=="1"){//为学生
     			url = baseUrl+"/user/stuRegister";
-    		 }else{//为教师
+    		}else{//为教师
     			url = baseUrl+"/user/teaRegister";
-    		 }
-	   		 $.ajax({
+    		}
+	   		$.ajax({
 	   	        type: "POST",
 	   	        url: url,
 	   	        data : vm.user,
@@ -146,6 +153,7 @@ var vm = new Vue({
     	userInfo();
     	//初始化班级信息
     	initStuClass();
+    	validateForm();
       }
 });
 
@@ -185,5 +193,117 @@ function userInfo(){
 		$("#student").hide();
 	}
 }
+
+//表单提交前再进行一次验证
+function onsubmitFn() {
+    var bootstrapValidator = $("#orderForm").data("bootstrapValidator");
+    bootstrapValidator.validate();
+    return bootstrapValidator.isValid();
+}
+//表单验证
+function validateForm(){
+	$("#orderForm").bootstrapValidator({
+	    message: 'This value is not valid',
+	    feedbackIcons: {
+	        valid: 'glyphicon glyphicon-ok',
+	        invalid: 'glyphicon glyphicon-remove',
+	        validating: 'glyphicon glyphicon-refresh'
+	    },
+	    fields: {
+	    	num: {
+	            message: "学号校验失败",
+	            validators: {
+	                notEmpty: {
+	                    message: "学号不能为空"
+	                }
+	            }
+	        },
+	        password: {
+	        	message: "密码校验失败",
+	        	validators: {
+	        		notEmpty: {
+	        			message: "学号不能为空"
+	        		},
+	        		stringLength: {//检测长度  
+                        min: 6,  
+                        max: 30,  
+                        message: '密码长度必须在6-30之间'  
+                    },
+	        	}
+	        },
+	        confirmPsw: {
+	            message: "验证密码失败",
+	            validators: {
+	            	notEmpty: {
+	        			message: "密码输入不一致"
+	        		},
+	                identical: {//与指定控件内容比较是否相同，比如两次密码不一致  
+                        field: 'password',//指定控件name  
+                        message: '密码输入不一致'  
+                    }, 
+	            }
+	        },
+	        name: {
+	            message: "姓名校验失败",
+	            validators: {
+	                notEmpty: {
+	                    message: "姓名不能为空"
+	                }
+	            }
+	        },
+	        phone: {
+	            message: "手机号码校验失败",
+	            validators: {
+	            	notEmpty: {
+	                    message: "手机号不能为空"
+	                },
+	                regexp: {//正则验证  
+                        regexp: /^[1][3,4,5,7,8][0-9]{9}$/,  
+                        message: '请输入正确的手机号码'  
+                    }, 
+	            }
+	        },
+	        mail: {
+	            message: "邮箱校验失败",
+	            validators: {
+	            	notEmpty: {
+	                    message: "邮箱不能为空"
+	                },
+	            	emailAddress: {//验证email地址  
+                        message: '请输入正确的邮箱地址'  
+                    },  
+	            }
+	        },
+	    }
+	});
+
+}
+
+/* 
+
+layer.confirm('解绑前，请先与营销人员沟通确认，您确定要解绑吗?', function() {
+			$.ajax({
+		        type: "POST",
+		        url: url,
+		        data: paramData,
+		        dataType:"json",
+		        success: function(resultData){
+		        	if(resultData.state=="0"){
+		        		$("#confirmedModal").modal("hide");
+						$('#tb_role').bootstrapTable('refresh');
+						layer.msg("解绑成功!", {
+		        			icon : 1
+		        		});
+					}else{
+						layer.msg("解绑失败!", {
+		        			icon : 0
+		        		});
+						
+					}
+		        }
+		    });
+	});
+*
+*/
 </script>
 </html>
