--- a/src/main/webapp/views/working.html
+++ b/src/main/webapp/views/working.html
@@ -6,6 +6,7 @@
 <link href="/SSMall/styles/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link href="/SSMall/styles/radio/magic-check.css" rel="stylesheet">
 <link href="/SSMall/js/layer/skin/default/layer.css" rel="stylesheet" id="layuicss-skinlayercss"></head>
+<link href="/SSMall/styles/checkbox.css" rel="stylesheet">
 <script type="text/javascript" src="/SSMall/js/jquery.min.js"></script>
 <script type="text/javascript" src="/SSMall/js/vue.js"></script>
 <script type="text/javascript" src="/SSMall/js/bootstrap/bootstrap.min.js"></script>
@@ -19,8 +20,6 @@
 	<style type="text/css">
 		.my{
 		background: #e0f2f1;
-		height:40px;
-		width:130px;
 		}
 	</style>
 </head>
@@ -32,232 +31,260 @@
 	        	<h3 class="panel-title">作业内容</h3>
 	    	</div>
 	    	<div style="padding: 10px 10px 0px 10px;">
-	    		<div class="row">
-			 		<div class="col-md-4 " style="text-align:right;">
-			 		 	<button type="button" class="btn btn-default my" @click="choiceQuestion">新增选择题</button>
-			 		</div>
-			 		<div class="col-md-4" style="text-align:center;">
-			 		 	<button type="button" class="btn btn-default my" @click="judgeQuestion">新增判断题</button>
-			 		</div>
-			 		<div class="col-md-3" style="text-align:left;">
-			 		 	<button type="button" class="btn btn-default my" @click="essayQuestion">新增解答题</button>
-			 		</div>
+	    		<div class="form-inline">
+		    		<div class="row">
+		    			<div class="col-sm-3 col-md-offset-3">
+			    			<label class="control-label">班级：</label>
+							<div class="form-group">
+								<select class="form-control" name="grade" v-model="grade">  
+									  <option v-for="grade in grades" v-bind:value="grade.value">  
+									    {{ grade.text }}  
+									  </option>  
+									</select> 
+							 </div>
+						 </div>
+						 <div class="col-sm-4">
+						 	<label class="control-label">科目：</label>
+							<div class="form-group">
+								<select class="form-control" name="subject" v-model="subject">  
+									  <option v-for="subject in subjects" v-bind:value="subject.value">  
+									    {{ subject.text }}  
+									  </option>  
+									</select> 
+							 </div>
+						 </div>
+				 		<div class="col-sm-4 col-md-offset-3" style="margin-top:10px">
+				 			<button type="button" class="btn btn-info" @click="addQuestion">新增题目</button>
+							<button type="button" class="btn btn-default" @click="deselect" style="margin-left:20px">移除</button>
+						</div>
+		    		</div>
 	    		</div>
 				<form class="form-horizontal" id="questionForm" style="margin-top: 20px;">
-							 	<div class="form-group" >
-									<div class="col-md-4 control-label">题目：</div>
-									<div class="col-sm-4">
-								  		<textarea rows="3" class="form-control" name="question" id="question" ></textarea>
+							 	<div class="form-group" id="que0Group">
+									<div class="col-md-1 col-md-offset-3 control-label">
+										<input class="magic-checkbox" type="checkbox" name="layout"  value="que0" id="que0">
+										<label for="que0">题目： </label>
 									</div>
-									<div class="col-sm-3">
-										<button type="button" class="btn btn-default" @click="deselect">移除</button>
+									<div class="col-sm-4">
+								  		<textarea rows="3" class="form-control" name="question" id="question0"></textarea>
 									</div>
 								</div>
-								<div class="form-group" >
-									<div class="col-md-4 control-label">题目：</div>
-									<div class="col-sm-4">
-								  		<textarea rows="3" class="form-control" name="question" id="question2" ></textarea>
-									</div>
-									<div class="col-sm-3">
-										<button type="button" class="btn btn-default" @click="deselect">移除</button>
-									</div>
-								</div>
-								
-								
-								
-								<!-- <div class="form-group">
-							 		<div class="col-md-4 control-label">题目：</div>
-								 	<div class="col-md-5">
-								  		<select class="form-control" name="user" id="user" @change="userExchage" >
-											<option value = "1">学生</option>
-											<option value = "2">教师</option>
-										</select>
-								 	</div>
-							 	</div> -->
-									
-						<div style="text-align: center;">
-	                        <button type="button" class="btn btn-primary" @click="submit" >确认</button>
-	                        <button type="button" class="btn btn-default back" style="margin-left:30px">返回</button>
-						</div>
+
 				</form>
+				<div style="text-align: center;">
+                       <button type="button" class="btn btn-primary" @click="submit" >发布</button>
+                       <button type="button" class="btn btn-default back" style="margin-left:30px">返回</button>
+				</div>
 			</div>
 		</div>		
-	</div>
+	</div>  
 </body>
 <script type="text/javascript">
-
 var baseUrl = "http://localhost:8080/SSMall";
+var flag = 1;
+var param = getUrlParam();
+var username = param.username;
 var vm = new Vue({
     el:'#working',
     data:{
-        user:{},
-        options:[]
+    	question:{},
+    	grades:[],
+    	grade:"999",
+    	subjects:[],
+    	subject:"999"
     },
     methods: {
-    	choiceQuestion :function(){
+    	submit :function(){
+    		var title = pacageData();
+    		var param = {};
+    		param.title = title;
+    		param.teacherNum = username;
+    		param.classNum = vm.grade;
+    		param.subNum = vm.subject;
+    		//console.log(vm.question);
+    		var url = baseUrl+"/working/save";
+    		$.ajax({
+    		        type: "POST",
+    		        url: url,
+    		        data : param ,
+    		        dataType:"json",
+    		        success: function(resultData){
+    					if(resultData.state==0){//保存成功
+    						layer.msg('注册成功', {
+  							  icon: 1,
+  							});
+    					 }else{
+    						layer.msg('注册失败，请重新提交', {
+    							  icon: 0,
+    							});
+    					 }           	 
+    		        }
+    		    });
     	},
-    	judgeQuestion :function(){
-    		
-    	},
-    	essayQuestion :function(){
+    	addQuestion :function(){
+    		var htmls = '<div class="form-group" id="que'+flag+'Group">'
+    		+'<div class="col-md-1 col-md-offset-3 control-label">'
+    		+'<input class="magic-checkbox" type="checkbox" name="layout" value ="que'+flag+'" id="que'+flag+'">'
+    		+'<label for="que'+flag+'">题目： </label>'
+    		+'</div>'
+    		+'<div class="col-sm-4">'
+    		+	'<textarea rows="3" class="form-control" name="question" id="question'+flag+'"></textarea>'
+    		+'</div>'
+    		+'</div>'
+    		flag ++; 
+    		$("#questionForm").append(htmls);
     	},
     	deselect :function(){
-    		
+			$("input:checkbox:checked").map(function(index,dom){
+				var groupId = $(dom).val()+"Group";
+				console.log(groupId);
+				$("#"+groupId+"").remove();
+			});
     	},
-    	submit :function(){
-    		//表单校验
-    		if(!onsubmitFn()){
-    			return ;
-    		}
-    		var url = "";
-    		
-	   		$.ajax({
-	   	        type: "POST",
-	   	        url: url,
-	   	        data : vm.user,
-	   	        dataType:"json",
-	   	        success: function(resultData){
-	   				if(resultData.state==0){//保存成功
-	   					window.location.href = baseUrl + "/views/login.html";
-	   				 }else{
-	   					layer.alert('注册失败，请重新提交', {
-	   						  icon: 0,
-	   						  skin: 'layer-ext-moon'
-	   						});
-	   				 }           	 
-	   	        }
-	   	    });
-    	}
+    
     },
     mounted: function () {
-    	userInfo();
-    	//初始化班级信息
+    	//查询该教师代课的班级信息
     	initStuClass();
-    	validateForm();
+    	//查询该教师代课的课程信息
+    	initSubject()
       }
 });
-
+function pacageData(){
+	var data=""
+	for(var i = 0;i < flag; i++){
+		if(($("#que"+i+"Group").length)>0){
+			data = data + $("#question"+i+"").val() + ":;"
+		}
+	}
+	return data.substring(0,data.length-2);
+	
+}
+/* 初始化班级信息 */
 function initStuClass(){
-	var url = baseUrl+"/class/list";
+	var url = baseUrl+"/class/queryClassByTeaId";
 	 $.ajax({
-        type: "GET",
+        type: "POST",
+        data:{
+        	teacherNum : username
+        },
         url: url,
         dataType:"json",
         success: function(resultData){
-        	
 			if(resultData.state==0){//查询成功
 				var options = [];
+				var flag={
+						text : "全部",
+						value : "999"
+				}
+				options.push(flag);
+				//vm.grade = "";
 			 	var data = resultData.data;
 				for (var i = 0; i < data.length; i++) {
 					var option = {}
 					option.text = data[i].className;
 					option.value = data[i].classNum;
-					vm.user.stuClass = data[i].classNum;
 					options.push(option);
 				}
-				vm.options = options;
+				vm.grades = options;
 			 }else{
 				 //查询失败
-				 alert(resultData.message);
+				 layer.msg(resultData.message, {
+		   				icon: 0,
+		   			});
 			 }           	 
         }
     });
 }
-
-/* 判断注册的信息为学生还是教师 */
-function userInfo(){
-	var user = $("#user").val();
-	if(user=="1"){//为学生
-		$("#student").show();
-	}else{//为教师
-		$("#student").hide();
-	}
+/* 初始化科目信息 */
+function initSubject(){
+	var url = baseUrl+"/subject/querySubjectByTeaId";
+	 $.ajax({
+        type: "POST",
+        url: url,
+        data:{
+        	teacherNum : username
+        },
+        dataType:"json",
+        success: function(resultData){
+			if(resultData.state==0){//查询成功
+				var options = [];
+				var flag={
+						text : "全部",
+						value : "999"
+				}
+				options.push(flag);
+				//vm.subject = "";
+			 	var data = resultData.data;
+				for (var i = 0; i < data.length; i++) {
+					var option = {}
+					option.text = data[i].subName;
+					option.value = data[i].subNum;
+					options.push(option);
+				}
+				
+				vm.subjects = options;
+			 }else{
+				 //查询失败
+				 layer.msg(resultData.message, {
+		   				icon: 0,
+		   			});
+			 }           	 
+        }
+    });
 }
-
-//表单提交前再进行一次验证
-function onsubmitFn() {
-    var bootstrapValidator = $("#questionForm").data("bootstrapValidator");
-    bootstrapValidator.validate();
-    return bootstrapValidator.isValid();
+//获取Url参数
+function getUrlParam(){
+    var url = location.search; //获取url中"?"符后的字串   
+    var theRequest = new Object();   
+    if (url.indexOf("?") != -1) {   
+       var str = url.substr(1);   
+       strs = str.split("&");   
+       for(var i = 0; i < strs.length; i ++) {   
+          theRequest[strs[i].split("=")[0]]=unescape(strs[i].split("=")[1]);   
+       }   
+    }   
+    return theRequest;   
 }
-//表单验证
-function validateForm(){
-	$("#questionForm").bootstrapValidator({
-	    message: 'This value is not valid',
-	    feedbackIcons: {
-	        valid: 'glyphicon glyphicon-ok',
-	        invalid: 'glyphicon glyphicon-remove',
-	        validating: 'glyphicon glyphicon-refresh'
-	    },
-	    fields: {
-	    	num: {
-	            message: "学号校验失败",
-	            validators: {
-	                notEmpty: {
-	                    message: "学号不能为空"
-	                }
-	            }
-	        },
-	        password: {
-	        	message: "密码校验失败",
-	        	validators: {
-	        		notEmpty: {
-	        			message: "学号不能为空"
-	        		},
-	        		stringLength: {//检测长度  
-                        min: 6,  
-                        max: 30,  
-                        message: '密码长度必须在6-30之间'  
-                    },
-	        	}
-	        },
-	        confirmPsw: {
-	            message: "验证密码失败",
-	            validators: {
-	            	notEmpty: {
-	        			message: "密码输入不一致"
-	        		},
-	                identical: {//与指定控件内容比较是否相同，比如两次密码不一致  
-                        field: 'password',//指定控件name  
-                        message: '密码输入不一致'  
-                    }, 
-	            }
-	        },
-	        name: {
-	            message: "姓名校验失败",
-	            validators: {
-	                notEmpty: {
-	                    message: "姓名不能为空"
-	                }
-	            }
-	        },
-	        phone: {
-	            message: "手机号码校验失败",
-	            validators: {
-	            	notEmpty: {
-	                    message: "手机号不能为空"
-	                },
-	                regexp: {//正则验证  
-                        regexp: /^[1][3,4,5,7,8][0-9]{9}$/,  
-                        message: '请输入正确的手机号码'  
-                    }, 
-	            }
-	        },
-	        mail: {
-	            message: "邮箱校验失败",
-	            validators: {
-	            	notEmpty: {
-	                    message: "邮箱不能为空"
-	                },
-	            	emailAddress: {//验证email地址  
-                        message: '请输入正确的邮箱地址'  
-                    },  
-	            }
-	        },
-	    }
+/* function submit(){
+	var url = baseUrl+"/working/save";
+	$.ajax({
+	        type: "POST",
+	        url: url,
+	        data : vm.user,
+	        dataType:"json",
+	        success: function(resultData){
+				if(resultData.state==0){//保存成功
+					window.location.href = baseUrl + "/views/login.html";
+				 }else{
+					layer.msg('注册失败，请重新提交', {
+						  icon: 0,
+						});
+				 }           	 
+	        }
+	    });
+}
+function addQuestion(){640222199604230026
+	var htmls = '<div class="form-group" id="que'+flag+'Group">'
+		+'<div class="col-md-1 col-md-offset-3 control-label">'
+		+'<input class="magic-checkbox" type="checkbox" name="layout" value ="que'+flag+'" id="que'+flag+'">'
+		+'<label for="que'+flag+'">题目： </label>'
+		+'</div>'
+		+'<div class="col-sm-4">'
+		+	'<textarea rows="3" class="form-control" name="question" ></textarea>'
+		+'</div>'
+		+'</div>'
+		flag ++; 
+		$("#questionForm").append(htmls);
+		
+}
+function deselect(){
+	$("input:checkbox:checked").map(function(index,dom){
+		var groupId = $(dom).val()+"Group";
+		console.log(groupId);
+		$("#"+groupId+"").remove();
 	});
-
-}
+} */
 
 /* 
 
