--- a/src/main/webapp/views/teacher.html
+++ b/src/main/webapp/views/teacher.html
@@ -72,8 +72,8 @@
 						<th data-field="teacherName">提交人</th>
 						<th data-field="publishUrl">作业URL</th>
 						<th data-field="state" data-formatter="stateFormatter">作业状态</th>
-						<th data-field="className" data-formatter="classNameFormatter">班级 </th>
-						<th data-field="subName" data-formatter="deliveryTypeFormatter">科目</th>
+						<th data-field="classNum" data-formatter="classNameFormatter">班级 </th>
+						<th data-field="subNum" data-formatter="deliveryTypeFormatter">科目</th>
 						<th data-field="stuName">学生姓名</th>
 						<th data-field="submitUrl">提交作业</th>
 						<th data-field="updateTime">修改时间</th>
@@ -190,7 +190,7 @@ function rowNoFormatter(value, row, index){
 //柔和灰（text-muted）、主要蓝（text-primary）、成功绿（text-success）、信息蓝（text-info）、警告黄（text-warning）、危险红（text-danger）
 //作业状态
 function stateFormatter(value, row, index) {
-	if (value == "1") {
+	if (value == "0") {
 		return "<span class='text-primary'>未批改</span>";
 	} else{
 		return "<span class='text-success'>已批改</span>";
