--- a/src/main/webapp/views/working.html
+++ b/src/main/webapp/views/working.html
@@ -33,8 +33,8 @@
 	    	<div style="padding: 10px 10px 0px 10px;">
 	    		<div class="form-inline">
 		    		<div class="row">
-		    			<div class="col-sm-3 col-md-offset-3">
-			    			<label class="control-label">班级：</label>
+		    			<div class="col-sm-2 col-md-offset-3">
+			    			<label >班级：</label>
 							<div class="form-group">
 								<select class="form-control" name="grade" v-model="grade">  
 									  <option v-for="grade in grades" v-bind:value="grade.value">  
@@ -43,7 +43,7 @@
 									</select> 
 							 </div>
 						 </div>
-						 <div class="col-sm-4">
+						 <div class="col-sm-2">
 						 	<label class="control-label">科目：</label>
 							<div class="form-group">
 								<select class="form-control" name="subject" v-model="subject">  
@@ -53,14 +53,25 @@
 									</select> 
 							 </div>
 						 </div>
-				 		<div class="col-sm-4 col-md-offset-3" style="margin-top:10px">
+				 		<div class="col-sm-3 " >
 				 			<button type="button" class="btn btn-info" @click="addQuestion">新增题目</button>
-							<button type="button" class="btn btn-default" @click="deselect" style="margin-left:20px">移除</button>
+							<button type="button" class="btn btn-default" @click="deselect" style="margin-left:10px">移除</button>
 						</div>
 		    		</div>
 	    		</div>
 				<form class="form-horizontal" id="questionForm" style="margin-top: 20px;">
-							 	<div class="form-group" id="que0Group">
+							 	<div class="row">
+							 		<div class="col-md-1 col-md-offset-3" style="margin-top:20px">
+										<label>作业名称：</label>
+									</div>
+									<div class="col-sm-4">
+								 		<div class="form-group" >
+									  		<textarea rows="3" class="form-control" name="question" id="title" style="width:545px"></textarea>
+										</div>
+									</div>
+							 	</div>
+								
+								<div class="form-group" id="que0Group">
 									<div class="col-md-1 col-md-offset-3 control-label">
 										<input class="magic-checkbox" type="checkbox" name="layout"  value="que0" id="que0">
 										<label for="que0">题目： </label>
@@ -95,9 +106,11 @@ var vm = new Vue({
     },
     methods: {
     	submit :function(){
-    		var title = pacageData();
+    		var title = $("#title").val();
+    		var questions = pacageData();
     		var param = {};
     		param.title = title;
+    		param.questions = questions;
     		param.teacherNum = username;
     		param.classNum = vm.grade;
     		param.subNum = vm.subject;
@@ -110,7 +123,7 @@ var vm = new Vue({
     		        dataType:"json",
     		        success: function(resultData){
     					if(resultData.state==0){//保存成功
-    						layer.msg('注册成功', {
+    						layer.msg('保存成功', {
   							  icon: 1,
   							});
     					 }else{
