--- a/src/main/webapp/views/teacher.html
+++ b/src/main/webapp/views/teacher.html
@@ -30,9 +30,10 @@
 						<div class="form-group">
 							<select class="form-control selectpicker" name="state" v-model="job.state" data-live-search="false"
 								data-size="10">
-								<option data-tokens="全部" value="9999" selected>全部</option>
-								<option data-tokens="未批改" value="1">未批改</option>
-								<option data-tokens="已批改" value="2">已批改</option>
+								<option data-tokens="全部" value="" selected>全部</option>
+								<option data-tokens="未批改" value="1">未提交</option>
+								<option data-tokens="已批改" value="2">未批改</option>
+								<option data-tokens="已批改" value="3">已批改</option>
 							</select>
 						</div>
 						<label class="control-label">班级：</label>
@@ -62,12 +63,13 @@
 			</div>
 			<table id="table" data-classes="table table-hover" 
 				data-pagination="true" data-toggle="table"
-				data-query-params="queryParams"
+				data-query-params="queryTeacherParams"
 				data-url="http://localhost:8080/SSMall/working/queryWorkList"
 				data-id-field="id">
 				<thead>
 					<tr>
 						<th data-formatter="rowNoFormatter">序号</th>
+						<th data-field="updateTime">修改时间</th>
 						<th data-field="title">作业题目</th>
 						<th data-field="teacherName">提交人</th>
 						<th data-field="publishUrl">作业URL</th>
@@ -76,7 +78,6 @@
 						<th data-field="subNum" data-formatter="deliveryTypeFormatter">科目</th>
 						<th data-field="stuName">学生姓名</th>
 						<th data-field="submitUrl">提交作业</th>
-						<th data-field="updateTime">修改时间</th>
 						
 					</tr>
 				</thead>
@@ -181,6 +182,18 @@ function initSubject(){
         }
     });
 }
+//参数
+function queryStudentParams(params) {
+	var query = $("#searchForm").serializeJSON();
+	query["teacherNum"] = username;
+	query["pageNumber"] = params.pageNumber;
+	query["pageSize"] = params.pageSize;
+	if (params.sortName) {
+		query["sortName"] = params.sortName;
+		query["sortOrder"] = params.sortOrder;
+	}
+	return query;
+}
 
 //序号
 function rowNoFormatter(value, row, index){
@@ -190,19 +203,33 @@ function rowNoFormatter(value, row, index){
 //柔和灰（text-muted）、主要蓝（text-primary）、成功绿（text-success）、信息蓝（text-info）、警告黄（text-warning）、危险红（text-danger）
 //作业状态
 function stateFormatter(value, row, index) {
-	if (value == "0") {
-		return "<span class='text-primary'>未批改</span>";
-	} else{
+	if (value == "1") {
+		return "<span class='text-danger'>未提交</span>";
+	} else if(value == "2"){
+		return "<span class='text-muted'>未批改</span>";
+	}else{
 		return "<span class='text-success'>已批改</span>";
 	}
 }
 //班级信息
 function classNameFormatter(value, row, index) {
-	return "<span class='text-info'>"+value+"</span>";
+	var grades = vm.grades;
+	for (var i = 0; i < grades.length; i++) {
+		if(grades[i].value==value){
+			return "<span class='text-info'>"+grades[i].text+"</span>";
+		}
+	}
+	return "<span class='text-info'></span>";
 }
 //科目信息
 function deliveryTypeFormatter(value, row, index) {
-	return "<span class='text-info'>"+value+"</span>";
+	var subjects = vm.subjects;
+	for (var i = 0; i < subjects.length; i++) {
+		if(subjects[i].value==value){
+			return "<span class='text-info'>"+subjects[i].text+"</span>";
+		}
+	}
+	return "<span class='text-info'></span>";
 }
 //获取Url参数
 function getUrlParam(){
